add api add friends
